--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App used for tracking your character stats in the D&D role playing game",
   "main": "index.js",
   "scripts": {
-    "start": "parcel index.html"
+    "start": "parcel index.html",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -17,13 +18,18 @@
   },
   "homepage": "https://github.com/tinvalincic/character-sheet#readme",
   "devDependencies": {
+    "@types/jest": "^26.0.20",
+    "jest": "^26.6.3",
     "parcel": "^1.12.4",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.0.2"
   },
   "dependencies": {
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
+    "@types/styled-components": "^5.1.7",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "styled-components": "^5.2.1"
   }
 }
